--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body
 {
-    color:#080000;
-    text-align:left;
-    font-family:Arial;
+    color:#333;
+    text-align: center;
+    font-family: 'Courier New';
     font-size: 16px;
     margin: 0 auto;
     padding: 0;
